--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "cosmiconfig": "^6.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
-    "jimp": "^0.8.5"
+    "mkdirp-promise": "^5.0.1",
+    "sharp": "^0.23.2"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.4",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/mkdirp-promise": "^5.0.0",
     "@types/mocha": "^5.2.7",
     "@types/mock-fs": "^4.10.0",
+    "@types/sharp": "^0.23.0",
     "@types/sinon": "^7.5.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
