chore: update dependencies

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "@istanbuljs/nyc-config-typescript",
   "all": true,
-  "exclude": ["test", "dist"],
+  "include": ["src/**/*.ts"],
   "cache": false
 }
