--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "prepublishOnly": "yarn build",
     "build": "yarn tsc",
-    "test": "nyc mocha --opts src/test/mocha.opts"
+    "test": "nyc --all mocha --opts src/test/mocha.opts"
   },
   "bin": {
     "resize-images": "./dist/bin/resizer.js",
@@ -20,23 +20,23 @@
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
     "mkdirp-promise": "^5.0.1",
-    "sharp": "^0.23.2"
+    "sharp": "^0.25.2"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.4",
     "@types/chai-as-promised": "^7.1.2",
     "@types/mkdirp-promise": "^5.0.0",
-    "@types/mocha": "^5.2.7",
+    "@types/mocha": "^7.0.2",
     "@types/mock-fs": "^4.10.0",
-    "@types/sharp": "^0.23.0",
+    "@types/sharp": "^0.24.0",
     "@types/sinon": "^7.5.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "husky": "^3.0.9",
-    "mocha": "^6.2.2",
+    "mocha": "^7.1.1",
     "mock-fs": "^4.10.3",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.1",
     "prettier": "1.19.0",
     "pretty-quick": "^2.0.1",
     "sinon": "^7.5.0",
