--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
     "cosmiconfig": "^6.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
-    "mkdirp-promise": "^5.0.1",
+    "mkdirp": "^1.0.4",
     "sharp": "^0.25.2"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.4",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/mkdirp-promise": "^5.0.0",
+    "@types/mkdirp": "^1.0.0",
     "@types/mocha": "^7.0.2",
     "@types/mock-fs": "^4.10.0",
     "@types/sharp": "^0.24.0",
-    "@types/sinon": "^7.5.0",
+    "@types/sinon": "^9.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "husky": "^3.0.9",
+    "husky": "^4.2.3",
     "mocha": "^7.1.1",
     "mock-fs": "^4.10.3",
     "nyc": "^15.0.1",
     "prettier": "1.19.0",
     "pretty-quick": "^2.0.1",
-    "sinon": "^7.5.0",
+    "sinon": "^9.0.1",
     "source-map-support": "^0.5.16",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.7.2"
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   }
 }
